# CTMS

./: .gitignore  BACKEND_DOCUMENTATION.md  DATABASE_SCHEMA.md  FASTAPI_BACKEND_SUMMARY.md  FRONTEND_DOCUMENTATION.md  NOTIFICATIONS_DOCUMENTATION.md  README.md  SWAGGER_SETUP.md  main.py  package-lock.json  pyproject.toml
backend/: .env.example  celerybeat-schedule-shm  celerybeat-schedule-wal  sample_data.json
backend/apps/analytics/: services.py  urls.py  views.py
backend/apps/audit/: admin.py  middleware.py  models.py  utils.py
backend/apps/audit/management/commands/: cleanup_audit_logs.py
backend/apps/audit/migrations/: 0001_initial.py
backend/apps/common/middleware/: jwt_autorefresh.py  priority_escalation.py
backend/apps/notifications/: apps.py  consumers.py  models.py  serializers.py  signals.py  tasks.py  views.py
backend/apps/notifications/migrations/: 0001_initial.py  0002_alter_notification_options_notification_is_delivered_and_more.py  0003_alter_notification_notification_type.py
backend/apps/security/: debug_views.py  urls.py  utils.py
backend/apps/security/middleware/: ip_security.py  smart_rate_limit.py
backend/apps/tasks/: admin.py  admin_filters.py  debug_views.py  models.py  permissions.py  serializers.py  serializers_bulk.py  services.py  services_bulk.py  signals.py  urls.py  views.py  views_bulk.py
backend/apps/tasks/migrations/: 0001_initial.py  0002_task_tasks_task_deadlin_ab25e9_idx.py
backend/apps/users/: authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py  views_me.py
backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_role_emailverificationtoken.py  0003_alter_user_timezone.py  0004_alter_user_timezone.py  0005_alter_user_timezone.py  0006_alter_user_timezone.py  0007_alter_user_timezone.py
backend/config/: asgi.py  celery.py  urls.py
backend/config/settings/: base.py  local.py
fastapi-backend/: .env.example  .gitignore  ARCHITECTURE.md  COMPARISON.md  DOCKER.md  Dockerfile  INDEX.md  POSTGRESQL_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UV_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.sh
fastapi-backend/app/: __init__.py  main.py
fastapi-backend/app/api/: dependencies.py  router.py
fastapi-backend/app/api/routes/: analytics.py  auth.py  tasks.py
fastapi-backend/app/core/: config.py  database.py  security.py
fastapi-backend/app/models/: __init__.py  audit.py  notification.py  task.py  user.py
fastapi-backend/app/schemas/: __init__.py  analytics.py  notification.py  task.py  user.py
fastapi-backend/tests/: __init__.py  test_api.py
frontend/: .env.example  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  notifications.ts  tasks.ts
frontend/src/components/: CaptchaModal.tsx  DependencyGraph.tsx  KanbanBoard.tsx  Layout.tsx  NotificationBell.tsx  NotificationPanel.tsx  ProtectedRoute.tsx  TaskBadge.tsx
frontend/src/components/ui/: modal.tsx
frontend/src/context/: AuthContext.tsx  NotificationContext.tsx
frontend/src/lib/: axios.ts  websocket.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Register.tsx  VerifyEmail.tsx
frontend/src/pages/Tasks/: BulkUpdate.tsx  TaskForm.tsx  TasksList.tsx
frontend/src/types/: index.ts
