[project]
name = "ctms"
version = "0.1.0"
description = "Conditional Task Management System backend"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    # Core framework
    "Django>=5.0,<6.0",

    # Django REST Framework
    "djangorestframework==3.16.1",

    # JWT authentication
    "djangorestframework-simplejwt>=5.3.1",

    # Environment variables
    "python-dotenv>=1.0.1",

    # Timezone handling
    "pytz>=2024.1",

    # Database
    "psycopg2-binary==2.9.11",

    # Caching / Redis
    "redis>=5.0.0",
    "django-redis>=5.4.0",

    # CORS
    "django-cors-headers>=4.0.0",

    # Django Channels (WebSockets)
    "channels>=4.0.0",
    "channels-redis>=4.0.0",
    "daphne>=4.0.0",

    # Task queue
    "celery>=5.3.0",

    # Routing
    "drf-nested-routers>=0.95.0",

    # Async / Django internals
    "asgiref>=3.8.1",

    # API schema
    "drf-spectacular",

    # Document export
    "python-docx>=1.1.2",

    # Production server
    "gunicorn>=21.0.0",
]
