[project]
name = "ctms-fastapi-backend"
version = "1.0.0"
description = "Clinical Trial Management System - FastAPI Backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core FastAPI dependencies
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    
    # Database - PostgreSQL with async support
    "sqlalchemy==2.0.25",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    
    # Authentication & Security
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.6",
    "bcrypt==4.1.2",
    
    # Email
    "aiosmtplib==3.0.1",
    "email-validator==2.1.0",
    
    # Utilities
    "python-dotenv==1.0.0",
    "pytz==2023.3.post1",
    
    # CORS
    "fastapi-cors==0.0.6",
    
    # Celery for background tasks (optional)
    "celery==5.3.6",
    "redis==5.0.1",
    
    # WebSocket support
    "websockets==12.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "httpx==0.26.0",
    "pytest-cov==4.1.0",
    "black==23.12.1",
    "flake8==7.0.0",
    "mypy==1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
